--- a/lv_linux_port/CMakeLists.txt
+++ b/lv_linux_port/CMakeLists.txt
@@ -9,10 +9,14 @@ add_library(lvgl STATIC
     ${LVGL_SOURCES}
 )
 
-target_include_directories(lib_custom PUBLIC
+set(LIBDRM_DIR "/home/hao/tsp_sdk/buildroot/output/rockchip_rk356x_recovery/build/libdrm-2.4.109")
+
+target_include_directories(lvgl PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}" 
     "${CMAKE_CURRENT_SOURCE_DIR}/lvgl"    
-    "${CMAKE_CURRENT_SOURCE_DIR}/lv_drivers" 
+    "${CMAKE_CURRENT_SOURCE_DIR}/lv_drivers"
+    "${LIBDRM_DIR}"  # Include directory for libdrm
+    "/usr/aarch64-linux-gnu/include/drm/"
 
 )
 
